--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "framer-motion": "^12.23.9",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.9",
     "gsap": "^3.13.0",
     "lucide-react": "^0.526.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
